dump.txt
translation-workflow> build (lib + exe)
Preprocessing library for translation-workflow-0.1.0.0..
Building library for translation-workflow-0.1.0.0..
[4 of 9] Compiling TransInterface [TransState changed]

/Users/franklindyer/Documents/dev/haskell-translator/src/TransInterface.hs:27:32: error: [GHC-83865]
    • Couldn't match type ‘(String, String)’ with ‘Char’
      Expected: String
        Actual: TransSuggestions
    • In the second argument of ‘($)’, namely ‘suggestion ts’
      In the second argument of ‘(<=>)’, namely
        ‘(strWrap $ suggestion ts)’
      In the first argument of ‘(<+>)’, namely
        ‘((strWrap $ fst $ currentPassage ts) <=> hBorder
            <=> (strWrap $ suggestion ts))’
   |
27 |                 <=> (strWrap $ suggestion ts))
   |                                ^^^^^^^^^^^^^

Error: [S-7282]
       Stack failed to execute the build plan.
       
       While executing the build plan, Stack encountered the error:
       
       [S-7011]
       While building package translation-workflow-0.1.0.0 (scroll up to its section to see the error)
       using:
       /Users/franklindyer/.stack/setup-exe-cache/aarch64-osx/Cabal-simple_6HauvNHV_3.10.1.0_ghc-9.6.4 --verbose=1 --builddir=.stack-work/dist/aarch64-osx/ghc-9.6.4 build lib:translation-workflow exe:translation-workflow-exe --ghc-options ""
       Process exited with code: ExitFailure 1 
